// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select column header component renders correctly when checked 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall css-blmy2t-MuiTableCell-root"
  >
    <span
      aria-label=""
      class=""
      data-mui-internal-clone-element="true"
      style="margin: auto;"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary Mui-checked css-1397pu4-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          aria-label="select all rows"
          checked=""
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="CheckBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Select column header component renders correctly when indeterminate 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall css-blmy2t-MuiTableCell-root"
  >
    <span
      aria-label=""
      class=""
      data-mui-internal-clone-element="true"
      style="margin: auto;"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary css-1397pu4-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          aria-label="select all rows"
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="true"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="IndeterminateCheckBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Select column header component renders correctly when loading is true 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall css-blmy2t-MuiTableCell-root"
  >
    <span
      aria-label="buttons.cart_loading_tooltip"
      class=""
      data-mui-internal-clone-element="true"
      style="margin: auto;"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary Mui-disabled css-1397pu4-MuiButtonBase-root-MuiCheckbox-root"
        tabindex="-1"
      >
        <input
          aria-label="select all rows"
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          disabled=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="CheckBoxOutlineBlankIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Select column header component renders correctly when selectedRows is undefined 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall css-blmy2t-MuiTableCell-root"
  >
    <span
      aria-label="buttons.cart_loading_failed_tooltip"
      class=""
      data-mui-internal-clone-element="true"
      style="margin: auto;"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary Mui-disabled css-1397pu4-MuiButtonBase-root-MuiCheckbox-root"
        tabindex="-1"
      >
        <input
          aria-label="select all rows"
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          disabled=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="CheckBoxOutlineBlankIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Select column header component renders correctly when unchecked 1`] = `
<DocumentFragment>
  <div
    class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeSmall css-blmy2t-MuiTableCell-root"
  >
    <span
      aria-label=""
      class=""
      data-mui-internal-clone-element="true"
      style="margin: auto;"
    >
      <span
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary css-1397pu4-MuiButtonBase-root-MuiCheckbox-root"
      >
        <input
          aria-label="select all rows"
          class="PrivateSwitchBase-input css-1m9pwf3"
          data-indeterminate="false"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="CheckBoxOutlineBlankIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </span>
    </span>
  </div>
</DocumentFragment>
`;
